--- a/res/layout/dialog_a11y_bounce_key.xml
+++ b/res/layout/dialog_a11y_bounce_key.xml
@@ -56,28 +56,79 @@
             android:id="@+id/bounce_key_value_200"
             android:text="@string/bounce_keys_dialog_option_200"
             android:paddingStart="12dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="start|center_vertical"
             android:background="@null"/>
         <RadioButton
             android:id="@+id/bounce_key_value_400"
             android:text="@string/bounce_keys_dialog_option_400"
             android:paddingStart="12dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="16dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginTop="12dp"
             android:background="@null"/>
         <RadioButton
             android:id="@+id/bounce_key_value_600"
             android:text="@string/bounce_keys_dialog_option_600"
             android:paddingStart="12dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="16dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginTop="12dp"
             android:background="@null"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp">
+            <RadioButton
+                android:id="@+id/bounce_key_value_custom"
+                android:paddingStart="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@null"/>
+            <LinearLayout
+                android:id="@+id/custom_value_option"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:paddingEnd="16dp">
+                <TextView
+                    android:id="@+id/bounce_key_value_custom_title"
+                    android:text="Custom"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"/>
+                <TextView
+                    android:id="@+id/bounce_key_value_custom_value"
+                    android:text="custom value"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"/>
+                <SeekBar
+                    android:id="@+id/bounce_key_value_custom_slider"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="36dp"
+                    android:min="1"
+                    android:max="50"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    android:background="@null"/>
+            </LinearLayout>
+        </LinearLayout>
     </RadioGroup>
 
 </LinearLayout>
