--- a/res/xml/trackpad_settings.xml
+++ b/res/xml/trackpad_settings.xml
@@ -62,6 +62,13 @@
         android:selectable="false"
         settings:controller="com.android.settings.inputmethod.TrackpadPointerSpeedPreferenceController"/>
 
+    <SwitchPreferenceCompat
+        android:key="mouse_reverse_vertical_scrolling"
+        android:title="@string/mouse_reverse_vertical_scrolling"
+        android:summary="@string/mouse_reverse_vertical_scrolling_summary"
+        settings:controller="com.android.settings.inputmethod.MouseReverseVerticalScrollingPreferenceController"
+        android:order="45"/>
+
     <Preference
         android:fragment="com.android.settings.inputmethod.PointerTouchpadFragment"
         android:key="pointer_and_touchpad"
