--- a/res/layout/modes_edit_name.xml
+++ b/res/layout/modes_edit_name.xml
@@ -16,7 +16,7 @@
   -->
 
 <!-- Theme.AppCompat.DayNight is in the parent View so that it's merged with the Theme.Settings
-     theme below. An AppCompat descendant (which Theme.Settings isn't is necessary to inflate
+     theme below. An AppCompat descendant (which Theme.Settings isn't) is necessary to inflate
      TextInputLayout. -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
